used strong and em to bold an italice random elements

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <h2>Lorem</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis ipsam expedita nesciunt distinctio consectetur nihil commodi, inventore minima ab id asperiores vitae animi praesentium illo aliquid dolores aut excepturi itaque.</p> 
         <p>Corporis rem nihil, vero blanditiis ipsam reprehenderit optio laborum ea. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum totam aperiam placeat perspiciatis vel rerum non? Earum, expedita porro! Maiores minima voluptatum itaque cumque tenetur labore excepturi commodi rerum voluptatem.</p>
-        <p>Illum fugit modi rem distinctio architecto quibusdam ad asperiores vero  Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ut unde officia voluptatum aperiam quod enim in doloremque voluptate consectetur, explicabo illum necessitatibus nulla, cupiditate corporis optio adipisci, quo pariatur?</p>
+        <p>Illum fugit modi rem distinctio architecto <strong>quibusdam</strong> ad asperiores vero  Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ut unde officia voluptatum aperiam quod enim in doloremque voluptate consectetur, explicabo illum necessitatibus nulla, cupiditate corporis optio adipisci, quo pariatur?</p>
         <p>totam commodi.</p>
 
         <h2>Lorem</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis ipsam expedita nesciunt distinctio consectetur nihil commodi, inventore minima ab id asperiores vitae animi praesentium illo aliquid dolores aut excepturi itaque.</p> 
-        <p>Corporis rem nihil, vero blanditiis ipsam reprehenderit optio laborum ea. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum totam aperiam placeat perspiciatis vel rerum non? Earum, expedita porro! Maiores minima voluptatum itaque cumque tenetur labore excepturi commodi rerum voluptatem.</p>
-        <p>Illum fugit modi rem distinctio architecto quibusdam ad asperiores vero  Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ut unde officia voluptatum aperiam quod enim in doloremque voluptate consectetur, explicabo illum necessitatibus nulla, cupiditate corporis optio adipisci, quo pariatur?</p>
+        <p>Corporis rem <strong>nihil</strong>, vero blanditiis ipsam reprehenderit optio <em>laborum</em> ea. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum totam aperiam placeat perspiciatis vel rerum non? Earum, expedita porro! Maiores minima voluptatum itaque cumque tenetur labore excepturi commodi rerum voluptatem.</p>
+        <p>Illum fugit modi rem distinctio <em>architecto</em> quibusdam ad asperiores vero  Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ut unde officia voluptatum aperiam quod enim in doloremque voluptate consectetur, explicabo illum necessitatibus nulla, cupiditate corporis optio adipisci, quo pariatur?</p>
         <p>totam commodi.</p>
         
     </body>
